--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zingle/es-util",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "ECMAScript Utilities",
   "engines": {
     "node": ">=10.18"
@@ -12,26 +12,29 @@
   },
   "license": "MIT",
   "scripts": {
-    "build": "babel src --presets babel-preset-es2015 --out-dir ./dist",
     "lint": "./node_modules/.bin/eslint src --ext js,jsx --quiet",
     "lint-fix": "./node_modules/.bin/eslint src --ext js,jsx --fix",
     "test": "./node_modules/jest/bin/jest.js --notify --detectOpenHandles",
     "test-coverage": "./node_modules/jest/bin/jest.js --detectOpenHandles --coverage --coverageReporters=text-lcov > coverage.report",
     "coveralls": "./node_modules/.bin/coveralls",
-    "prepublish": "npm run build"
+    "clean": "rm -rf ./dist",
+    "build": "npm run build:files && npm run build:copy",
+    "build:copy": "cp ./package.json ./dist",
+    "build:files": "babel src --out-dir ./dist --ignore \"**/*.test.js\"",
+    "release": "npm run clean && npm run build && npm publish dist"
   },
   "dependencies": {
     "date-fns": "^2.10.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
-    "moment-timezone": "^0.5.28"
+    "moment-timezone": "^0.5.28",
+    "url-search-params-polyfill": "^8.0.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.8.7",
     "@babel/preset-react": "^7.0.0",
-    "babel": "^6.23.0",
-    "babel-cli": "^6.26.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-dynamic-import-node": "^2.3.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
