Add tests and update method calls.

--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "license": "MIT",
   "scripts": {
     "lint": "./node_modules/.bin/eslint src --ext js,jsx --quiet",
-    "lint-fix": "./node_modules/.bin/eslint src --ext js,jsx --fix",
+    "lint:fix": "./node_modules/.bin/eslint src --ext js,jsx --fix",
     "test": "./node_modules/jest/bin/jest.js --notify --detectOpenHandles",
-    "test-coverage": "./node_modules/jest/bin/jest.js --detectOpenHandles --coverage --coverageReporters=text-lcov > coverage.report",
-    "coveralls": "./node_modules/.bin/coveralls",
+    "test:all": "npm run lint && npm run test:coverage",
+    "test:coverage": "./node_modules/jest/bin/jest.js --detectOpenHandles --coverage --coverageReporters=text-lcov > coverage.report",
+    "coveralls": "cat coverage.report | ./node_modules/.bin/coveralls",
     "clean": "rm -rf ./dist",
     "build": "npm run build:files && npm run build:copy",
     "build:copy": "cp ./package.json ./dist",
@@ -24,6 +25,7 @@
     "release": "npm run clean && npm run build && npm publish dist"
   },
   "dependencies": {
+    "configstore": "^5.0.1",
     "date-fns": "^2.10.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
