--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,5 @@ node_js:
 cache:
   directories:
     - node_modules
-script:
-  - npm run lint
-  - npm run test-coverage
-after_success: cat coverage.report | npm run coveralls
+script: npm run test:all
+after_success: npm run coveralls
